# strace

./: CMakeLists.txt  README.md
hdrs/: error.h  signal.h  strace.h
srcs/: error.c  get_info.c  getpath.c  main.c  print.c  strace.c  syscall.c  tool.c
test/: getpath.c
